[PAY-1019] Fix premium content tags overlap track title (#2991)

--- a/apps/audius-client/packages/web/src/components/track/desktop/TrackTile.module.css
+++ b/apps/audius-client/packages/web/src/components/track/desktop/TrackTile.module.css
@@ -147,6 +147,10 @@
   height: 20px;
 }
 
+.withPremium {
+  margin-right: 188px;
+}
+
 .title {
   font-style: normal;
   font-weight: var(--font-bold);
